change name of developper

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="landing">
         <div class="intro-text">
             <h1>I'm Mustapha</h1>
-            <p>mustapha is data scientist and software developper algerien </p>
+            <p>yacine is data scientist and software developper Algerien </p>
         </div>
     </div>
     <!-- end of the lading part-->
